--- a/public/index.html
+++ b/public/index.html
@@ -49,9 +49,11 @@
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9tvO2YPEmjQcNKGWyrV37vYRU7hdKlbM&callback=initMap">
-    </script>
+<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+</script>
+<script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9tvO2YPEmjQcNKGWyrV37vYRU7hdKlbM&callback=initMap">
+</script>
     <style>
       
     </style>
