--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    
+    <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
     <script src="https://unpkg.com/react-leaflet/dist/react-leaflet.min.js"></script>
 <!-- unpkg, development -->
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
