--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
+    --><link rel="stylesheet" href="https://unpkg.com/react-leaflet-markercluster/dist/styles.min.css" />
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <link href='https://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
     <script src="https://unpkg.com/react-leaflet/dist/react-leaflet.min.js"></script>
@@ -28,7 +28,7 @@
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?sensor=true"></script> 
 <script src="gmaps.core.js"></script> 
-
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false&amp;language=en" type="text/javascript"></script>
 <script src="gmaps.markers.js"></script> 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
