Done except alerts

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    --><link rel="stylesheet" href="https://unpkg.com/react-leaflet-markercluster/dist/styles.min.css" />
+    --><script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/react-leaflet-markercluster/dist/styles.min.css" />
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="https://unpkg.com/react-leaflet/dist/react-leaflet.min.js"></script>
 <!-- unpkg, development -->
@@ -50,6 +51,8 @@
 <script async defer
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC9tvO2YPEmjQcNKGWyrV37vYRU7hdKlbM&callback=initMap">
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.js"></script>
+
     <style>
 
     </style>
